BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Trial_Scope_Report_BMS__c.object
<CustomObject>
    <description>VPRO - December 2011 - BMS Oncology Requirements &amp; Design: Custom object to store trial scope reports generated by MSL users.</description>
    <fields>
        <fullName>BMS_Country_Code_BMS_SHARED__c</fullName>
        <description>VPRO BMS EMEA Feb-2014: created the field, used by any Region, sourced from the User Source Country field.</description>
        <formula>TEXT( Owner:User.User_Source_Country_BMS_CORE__c )</formula>
        <label>BMS Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMS_Protocol_Manager_Email__c</fullName>
        <formula>Clinical_Trial_Protocol_BMS__r.BMS_Protocol_Manager_Email__c</formula>
        <label>Protocol Manager Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clinical_Trial_Protocol_BMS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Clinical Trial Protocol</label>
        <referenceTo>Clinical_Trial_Protocol_BMS__c</referenceTo>
        <relationshipName>Trial_Scope_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Clinical_Trial_Site_BMS__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Clinical Trial Site</label>
        <referenceTo>Clinical_Trial_Site_BMS__c</referenceTo>
        <relationshipName>Trial_Scope_Reports</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_BMS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>VPRO - December 2011 - BMS Oncology Requirements &amp; Design: Custom field to capture the customer related to a given scope documentation report.</description>
        <label>HCP</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Trial_Scope_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_BMS__c</fullName>
        <description>VPRO - December 2011 - BMS Oncology Requirements &amp; Design: Custom field to capture the date of a given scope documentation report.</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_BMS_EMEA__c</fullName>
        <description>BMS ACN - Q3 GRM : September 2016: Email field to populate the Notified Mailing Group on the Trial Scope Report. (D-List of the Clinical Trial Protocol associated with Clinical Trial Site)</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Protocol_Distribution_List_BMS__c</fullName>
        <label>Email Protocol Distribution List</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Recipient_1_BMS__c</fullName>
        <label>Email Recipient 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Recipient_2_BMS__c</fullName>
        <label>Email Recipient 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Recipient_3_BMS__c</fullName>
        <label>Email Recipient 3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Interaction_BMS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>VPRO - December 2011 - BMS Oncology Requirements &amp; Design: Custom field to capture the interaction related to a given scope documentation report.</description>
        <label>Interaction</label>
        <referenceTo>Call2_vod__c</referenceTo>
        <relationshipName>Trial_Scope_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Investigator_Location_EU_TSR_BMS_EMEA__c</fullName>
        <description>VPRO - December 2013 - BMS EMEA CORE Requirements &amp; Design: Custom field created for EU Trial scope report form.</description>
        <label>Principle Investigator &amp; Location:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MSL_BMS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>VPRO - December 2011 - BMS Oncology Requirements &amp; Design: Custom field to capture the MSL user who created a given scope documentation report.</description>
        <label>MSL</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Trial_Scope_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mandatory_Touch_Point_Visit_BMS_IC__c</fullName>
        <description>Used by Intercon - Is Trial Scope Report part of a amandatory Touch point visit.</description>
        <label>Mandatory Touch Point Visit</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Notified_MG_BMS_EMEA__c</fullName>
        <description>BMS ACN - Q3 GRM : September 2016  - Formula Field to display the Notified Mailing Group on the Trial Scope Report. (D-List of the Clinical Trial Protocol associated with Clinical Trial Site)</description>
        <formula>Clinical_Trial_Site_BMS__r.Clinical_Trial_BMS__r.Protocol_Distribution_List_BMS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Notified MG</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Clinical_Trial_Site_BMS__c</fullName>
        <label>Other Clinical Trial Site</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Principal_Investigator_Location_BMS_EMEA__c</fullName>
        <description>BMS ACN - July 2016:Custom field created for EU Trial scope report form.</description>
        <formula>IF(ISBLANK(Clinical_Trial_Site_BMS__r.Province_County_BMS__c), (Clinical_Trial_Site_BMS__r.Investigator_Title_BMS__c &amp; &quot; &quot; &amp; Clinical_Trial_Site_BMS__r.Forename_BMS__c&amp;&quot; &quot;&amp;Clinical_Trial_Site_BMS__r.Surname_BMS__c &amp; BR() &amp; Clinical_Trial_Site_BMS__r.Centre_Name_BMS__c&amp;&quot;,&quot;&amp; Clinical_Trial_Site_BMS__r.City_BMS__c&amp;&quot;,&quot;&amp; Clinical_Trial_Site_BMS__r.Country_BMS__c), (Clinical_Trial_Site_BMS__r.Investigator_Title_BMS__c &amp; &quot; &quot; &amp; Clinical_Trial_Site_BMS__r.Forename_BMS__c&amp;&quot; &quot;&amp;Clinical_Trial_Site_BMS__r.Surname_BMS__c &amp; BR() &amp; Clinical_Trial_Site_BMS__r.Centre_Name_BMS__c&amp;&quot;,&quot;&amp; Clinical_Trial_Site_BMS__r.City_BMS__c&amp;&quot;,&quot;&amp; Clinical_Trial_Site_BMS__r.Province_County_BMS__c &amp;&quot;,&quot;&amp; Clinical_Trial_Site_BMS__r.Country_BMS__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Principal Investigator &amp; Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Protocol_Distribution_List_BMS__c</fullName>
        <formula>Clinical_Trial_Protocol_BMS__r.Protocol_Distribution_List_BMS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Protocol Distribution List</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Protocol_Manager_Email_BMS__c</fullName>
        <label>Protocol Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Q10_EU_TSR_BMS_EMEA__c</fullName>
        <description>VPRO - December 2013 - BMS EMEA CORE Requirements &amp; Design: Custom field created for EU Trial scope report form.</description>
        <inlineHelpText>List names of all site staff/RCO/CRO present during visit</inlineHelpText>
        <label>Names of site staff/CRO/RCO:</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q11_EU_TSR_BMS_EMEA__c</fullName>
        <description>VPRO - December 2013 - BMS EMEA CORE Requirements &amp; Design: Custom field created for EU Trial scope report form.</description>
        <label>Additional Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q1_Comments_EU_TSR_BMS_EMEA__c</fullName>
        <description>VPRO - December 2013 - BMS EMEA CORE Requirements &amp; Design: Custom field created for EU Trial scope report form.</description>
        <label>If no, provide details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Q1_EU_TSR_BMS_EMEA__c</fullName>
        <description>VPRO - December 2013 - BMS Sales Requirements &amp; Design: Custom field created for EU Trial scope report form.</description>
        <inlineHelpText>Please confirm that RCO/CRO/Site manager was contacted prior to site visit:</inlineHelpText>
        <label>Was RCO/CRO/Site manager contacted?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q3_1_EU_TSR_BMS_EMEA__c</fullName>
        <description>VPRO - December 2013 - BMS EMEA CORE Requirements &amp; Design: Custom field created for EU Trial scope report form.</description>
        <label>Were additional trainings required?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q3_Comments_EU_TSR_BMS_EMEA__c</fullName>
        <description>VPRO - December 2013 - BMS EMEA CORE Requirements &amp; Design: Custom field created for EU Trial scope report form.</description>
        <label>Additional Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q4_Comments_EU_TSR_BMS_EMEA__c</fullName>
        <description>VPRO - December 2013 - BMS EMEA CORE Requirements &amp; Design: Custom field created for EU Trial scope report form.</description>
        <label>If yes, provide details</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>IF((CreatedBy.Profile.Name=&quot;BMS-SPEC11-MGR-SALES&quot;)||(CreatedBy.Profile.Name=&quot;BMS-SPEC11-REP-SALES&quot;)||(CreatedBy.Profile.Name=&quot;BMS-SPEC12-MGR-RS&quot;)||(CreatedBy.Profile.Name=&quot;BMS-SPEC12-REP-RS&quot;)||(CreatedBy.Profile.Name=&quot;BMS-SPEC13-MGR-MSL&quot;)||(CreatedBy.Profile.Name=&quot;BMS-SPEC13-REP-MSL&quot;),&quot;PR&quot;,&quot;US&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scope_Documentation_Notes_BMS__c</fullName>
        <description>VPRO - December 2011 - BMS Oncology Requirements &amp; Design: Custom field to capture a MSL user&apos;s scope documentation notes.</description>
        <label>Visit Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Static_Text_EU_TSR_BMS_EMEA__c</fullName>
        <defaultValue>&quot;Please complete all sections of this report within 5 days after the visit and e-mail to the Field Medical Trial Lead and those people who need to be informed as per study requirements (may include local DAS, local site manager and/or monitor).&quot;</defaultValue>
        <description>VPRO - December 2013 - BMS EMEA CORE Requirements &amp; Design: Custom field created for EU Trial scope report form.</description>
        <label>SUMMARY OF DISCUSSION WITH SITE STAFF</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Study_Name_EU_TSR_BMS_EMEA__c</fullName>
        <description>VPRO - December 2013 - BMS EMEA CORE Requirements &amp; Design: Custom field created for EU Trial scope report form.</description>
        <label>Study Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Therapeutic_Area_BMS__c</fullName>
        <formula>IF((CreatedBy.Profile.Name=&quot;BMS-SPEC1-MGR-SALES&quot;)||(CreatedBy.Profile.Name=&quot;BMS-SPEC1-REP-SALES&quot;)||(CreatedBy.Profile.Name=&quot;BMS-SPEC2-MGR-RS&quot;)||(CreatedBy.Profile.Name=&quot;BMS-SPEC2-REP-RS&quot;)||(CreatedBy.Profile.Name=&quot;BMS-SPEC3-MGR-MSL&quot;)||(CreatedBy.Profile.Name=&quot;BMS-SPEC3-REP-MSL&quot;)||(CreatedBy.Profile.Name=&quot;BMS-SPEC13-REP-MSL&quot;)||(CreatedBy.Profile.Name=&quot;BMS-SPEC4-OCS&quot;),&quot;ONCOLOGY&quot;,IF((CreatedBy.Profile.Name=&quot;BMS-SPEC5-MGR-SALES&quot;)||(CreatedBy.Profile.Name=&quot;BMS-SPEC5-REP-SALES&quot;)||(CreatedBy.Profile.Name=&quot;BMS-SPEC6-MGR-RS&quot;)||(CreatedBy.Profile.Name=&quot;BMS-SPEC6-REP-RS&quot;)||(CreatedBy.Profile.Name=&quot;BMS-SPEC7-MGR-MSL&quot;)||(CreatedBy.Profile.Name=&quot;BMS-SPEC7-REP-MSL&quot;)||(CreatedBy.Profile.Name=&quot;BMS-SPEC10-REP-MSL&quot;)||(CreatedBy.Profile.Name=&quot;BMS-SPEC10-MGR-MSL&quot;),&quot;IMMUNOSCIENCE&quot;,IF((CreatedBy.Profile.Name=&quot;BMS-SPEC8-KAM-SALES&quot;)||(CreatedBy.Profile.Name=&quot;BMS-SPEC8-MGR-SALES&quot;)||(CreatedBy.Profile.Name=&quot;BMS-SPEC8-REP-SALES&quot;)||(CreatedBy.Profile.Name=&quot;BMS-SPEC9-REP-RS&quot;)||(CreatedBy.Profile.Name=&quot;BMS-SPEC9-MGR-RS&quot;)||(CreatedBy.Profile.Name=&quot;BMS-SPEC10-MGR-MSL&quot;)||(CreatedBy.Profile.Name=&quot;BMS-SPEC10-REP-MSL&quot;),&quot;TRANSPLANT&quot;,&quot;N/A&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Therapeutic Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Touch_point_achieved_BMS_IC__c</fullName>
        <description>Used by Intercon -Timescale in which touchpoint has been achieved</description>
        <label>Touch point achieved</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Study Visit Report</label>
    <listViews>
        <fullName>All_Study_Visit_Reports</fullName>
        <columns>NAME</columns>
        <columns>Clinical_Trial_Protocol_BMS__c</columns>
        <columns>Clinical_Trial_Site_BMS__c</columns>
        <columns>Customer_BMS__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Date_BMS__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All Study Visit Reports</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Study_Visit_Reports</fullName>
        <columns>NAME</columns>
        <columns>Clinical_Trial_Protocol_BMS__c</columns>
        <columns>Clinical_Trial_Site_BMS__c</columns>
        <columns>Customer_BMS__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Date_BMS__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Mine</filterScope>
        <label>My Study Visit Reports</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>TSR-{00000}</displayFormat>
        <label>Study Visit Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Study Visit Reports</pluralLabel>
    <recordTypes>
        <fullName>Trial_Scope_Report</fullName>
        <active>true</active>
        <description>Please select this record type to create Study Visit Report records.</description>
        <label>Trial Scope Report</label>
    </recordTypes>
    <recordTypes>
        <fullName>Trial_Scope_Report_Submitted</fullName>
        <active>true</active>
        <description>Please DO NOT select this record type because it is driven automatically.</description>
        <label>Trial Scope Report Submitted</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>BMS_EMEA_Cannot_create_with_Submitted_RT</fullName>
        <active>true</active>
        <description>VPRO EMEA April 2014: the Trial Scope Report cannot be created when selecting &quot;Trial Scope Report (Submitted)&quot; as a Record Type.</description>
        <errorConditionFormula>AND( 
ISNEW(), 
RecordType.DeveloperName = &apos;Trial_Scope_Report_Submitted&apos; 
)</errorConditionFormula>
        <errorMessage>The Study Visit Report cannot be created when selecting &quot;Study Visit Report (Submitted)&quot; in the previous screen. Please go back and select &quot;Study Visit Report&quot; instead.</errorMessage>
    </validationRules>
</CustomObject>